--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -80,4 +82,8 @@
     #d3d3d4ff,
     #5f5d5aff
   );
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
 }
